2008-07-20  Johan Dahlin  <johan@gnome.org>

	* Makefile.am:
	* configure.ac:
	* glib/Makefile.am:
	* glib/__init__.py:
	* glib/glibmodule.c (pyg_destroy_notify), (get_handler_priority),
	(pyg_handler_marshal), (pyg_idle_add), (pyg_timeout_add),
	(pyg_timeout_add_seconds), (iowatch_marshal), (pyg_io_add_watch),
	(pyg_source_remove), (pyg_main_context_default),
	(child_watch_func), (child_watch_dnotify), (pyg_child_watch_add),
	(pyg_markup_escape_text), (pyg_get_current_time), (pyg_main_depth),
	(pyg_filename_display_name), (pyg_filename_display_basename),
	(pyg_filename_from_utf8), (pyg_get_application_name),
	(pyg_set_application_name), (pyg_get_prgname), (pyg_set_prgname),
	(pyg_register_api), (pyg_register_error),
	(pyg_register_version_tuples), (init_glib):
	* glib/pyglib-private.h:
	* glib/pyglib.c (pyglib_init), (pyglib_init_internal),
	(pyglib_gil_state_ensure), (pyglib_gil_state_release),
	(pyglib_enable_threads), (pyglib_gil_state_ensure_py23),
	(pyglib_gil_state_release_py23), (pyglib_error_check):
	* glib/pyglib.h:
	* glib/pygspawn.c (pyg_pid_close), (pyg_pid_free),
	(pyg_pid_tp_init), (pyg_pid_new), (_pyg_spawn_async_callback),
	(pyglib_spawn_async), (pyg_spawn_register_types):
	* glib/pygspawn.h:
	Add glib bindings, currently not installed or used.
	Add some internal API and move over a couple of functions
	from the gobject module. Still very much a work in progress.

2008-07-19  Johan Dahlin  <johan@gnome.org>

	* gio/gio.override:
	Ignore a bunch of functions which are not relevant.

2008-07-19  Johan Dahlin  <johan@gnome.org>

	* gio/gfile.override:
	* gio/gio.defs:
	* gio/gio.override:
	* tests/test_gio.py:
	Bind gio.Mount.unmount, gio.File.mount_mountable,
	gio.File.unmount_mountable and gio.File.mount_enclosing_volume.
	Add documents and tests.

2008-07-19  Johan Dahlin  <johan@gnome.org>

	* gio/gio.override: Set module name back to
	gio, as setting it to gio._gio breaks pydoc.

	* gio/gio.defs:
	Use property based constructors when possible.
